- the quotation client was modified

--- a/src/app/components/purchase-list/purchase-list.component.html
+++ b/src/app/components/purchase-list/purchase-list.component.html
@@ -12,7 +12,7 @@
     <td>{{item.id}}</td>
     <td>{{item.name}}</td>
     <td>{{item.amount}}</td>
-    <td>{{item.currency}}</td>
+    <td>{{item.currencyName}}</td>
   </tr>
   </tbody>
 </table>
