--- a/src/app/components/purchase-list/purchase-list.component.html
+++ b/src/app/components/purchase-list/purchase-list.component.html
@@ -11,7 +11,7 @@
   <tr *ngFor="let item of purchaseList">
     <td>{{item.id}}</td>
     <td>{{item.name}}</td>
-    <td>{{item.amount}}</td>
+    <td>{{item.value}}</td>
     <td>{{item.currencyName}}</td>
   </tr>
   </tbody>
