--- a/src/app/components/purchase/purchase.component.html
+++ b/src/app/components/purchase/purchase.component.html
@@ -31,7 +31,7 @@
       </p>
       <div class="control">
 
-        <input formControlName="amount" class="input" type="text" placeholder="Amount of money"
+        <input formControlName="amount" class="input" type="text" placeholder="Monto  en Pesos Argentinos"
         >
         <div *ngIf="submitted && f.amount.errors" class="help is-danger">
           <div *ngIf="f.amount.errors.required">Monto es requerido</div>
